Major refactoring and improvements
This commit includes:
- Fixed JLine/Jansi dependency conflict that was causing console errors
- Consolidated all startup scripts into a single run-task-scheduler.bat/ps1
- Added proper spacing in UI between commands for better readability
- Removed unnecessary test files and cleaned up workspace
- Updated .gitignore to exclude unnecessary binaries and temporary files
- Added email notification testing capability
- Fixed UI rendering issues

These changes make the application more maintainable and user-friendly with a
streamlined startup process and improved error handling.

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,19 @@
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
-            <version>2.4.0</version>
+            <version>1.18</version>
+        </dependency>
+        <!-- Text-IO for interactive text user interfaces -->
+        <dependency>
+            <groupId>org.beryx</groupId>
+            <artifactId>text-io</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <!-- Emoji Java for better emoji support -->
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>5.1.1</version>
         </dependency>
         <!-- JUnit for unit testing -->
         <dependency>
