--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "smartSuggestions": true,
-  "email": "ghanshyamthacker3011@gmail.com"
+  "smartSuggestions": false,
+  "email": "ghanshayamthacker3011@gmail.com"
 }
