--- a/tasks.json
+++ b/tasks.json
@@ -571,7 +571,7 @@
   {
     "id": 46,
     "title": "test-email",
-    "completed": false,
+    "completed": true,
     "dueDate": "2025-06-29 12:00",
     "tags": [],
     "notified": false,
@@ -606,5 +606,88 @@
     "recurrenceCount": 0,
     "occurrencesGenerated": 0,
     "priority": "HIGH"
+  },
+  {
+    "id": 49,
+    "title": "Test command execution",
+    "completed": true,
+    "dueDate": "2025-06-29 11:50",
+    "tags": [],
+    "notified": false,
+    "reminderTime": 1,
+    "isRecurring": false,
+    "recurrenceCount": 0,
+    "occurrencesGenerated": 0,
+    "command": "echo Command executed successfully \u003e command_test_output.txt",
+    "priority": "HIGH"
+  },
+  {
+    "id": 50,
+    "title": "Background Test Task",
+    "completed": true,
+    "dueDate": "2025-06-29 12:12",
+    "tags": [],
+    "notified": false,
+    "reminderTime": 60,
+    "isRecurring": false,
+    "recurrenceCount": 0,
+    "occurrencesGenerated": 0,
+    "command": "echo Test successful at %date% %time% \u003e test_bg_success.txt",
+    "priority": "MEDIUM"
+  },
+  {
+    "id": 51,
+    "title": "Background Test Task",
+    "completed": true,
+    "dueDate": "2025-06-29 12:18",
+    "tags": [],
+    "notified": false,
+    "reminderTime": 1,
+    "isRecurring": false,
+    "recurrenceCount": 0,
+    "occurrencesGenerated": 0,
+    "command": "echo Test successful at %date% %time% \u003e gg_bg_success.txt",
+    "priority": "MEDIUM"
+  },
+  {
+    "id": 52,
+    "title": "Background Test Task",
+    "completed": true,
+    "dueDate": "2025-06-29 12:46",
+    "tags": [],
+    "notified": false,
+    "reminderTime": 1,
+    "isRecurring": false,
+    "recurrenceCount": 0,
+    "occurrencesGenerated": 0,
+    "command": "echo Test successful at %date% %time% \u003e og_bg_success.txt",
+    "priority": "MEDIUM"
+  },
+  {
+    "id": 53,
+    "title": "Background Test Task",
+    "completed": true,
+    "dueDate": "2025-06-30 18:25",
+    "tags": [],
+    "notified": false,
+    "reminderTime": 1,
+    "isRecurring": false,
+    "recurrenceCount": 0,
+    "occurrencesGenerated": 0,
+    "command": "echo Test successful at %date% %time% \u003e ok_bg_success.txt",
+    "priority": "MEDIUM"
+  },
+  {
+    "id": 54,
+    "title": "email-notification",
+    "completed": false,
+    "dueDate": "2025-07-01 12:00",
+    "tags": [],
+    "notified": false,
+    "reminderTime": 60,
+    "isRecurring": false,
+    "recurrenceCount": 0,
+    "occurrencesGenerated": 0,
+    "priority": "MEDIUM"
   }
 ]
