Repository cleanup: removed unnecessary and generated files

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,7 @@ task_outputs/*
 !Dockerfile
 !docker-compose.yml
 !docker-entrypoint.sh
+# Additional exclusions
+dependency-reduced-pom.xml
+*.bak
+natty-logging.properties
