--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -1,21 +1,18 @@
-# Quartz Scheduler Configuration to minimize logging
+# Basic Quartz configuration
 org.quartz.scheduler.instanceName = DefaultQuartzScheduler
 org.quartz.scheduler.rmi.export = false
 org.quartz.scheduler.rmi.proxy = false
-org.quartz.scheduler.wrapJobExecutionInUserTransaction = false
 
-# ThreadPool Configuration
+# Thread pool setup - 10 threads to handle jobs
 org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
 org.quartz.threadPool.threadCount = 10
 org.quartz.threadPool.threadPriority = 5
 
-# JobStore Configuration  
-org.quartz.jobStore.misfireThreshold = 60000
+# Use memory storage for jobs instead of database
 org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
+org.quartz.jobStore.misfireThreshold = 60000
 
-# Disable all Quartz logging by setting log level to ERROR
+# Keep things quiet
+org.quartz.scheduler.skipUpdateCheck = true
 org.quartz.plugin.shutdownhook.class = org.quartz.plugins.management.ShutdownHookPlugin
 org.quartz.plugin.shutdownhook.cleanShutdown = true
-
-# Suppress initialization messages
-org.quartz.scheduler.skipUpdateCheck = true
