--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -1,20 +1,14 @@
-# SLF4J Simple Logger Configuration
-# This configuration suppresses all the verbose Quartz Scheduler logging
-
-# Default logging level
+#simple logging settings
 org.slf4j.simpleLogger.defaultLogLevel=error
-
-# Set specific log levels for Quartz
-org.slf4j.simpleLogger.log.org.quartz=error
-org.slf4j.simpleLogger.log.org.quartz.core=error
-org.slf4j.simpleLogger.log.org.quartz.impl=error
-org.slf4j.simpleLogger.log.org.quartz.simpl=error
-
-# Suppress Natty parser logging
-org.slf4j.simpleLogger.log.com.joestelmach=error
-
-# Show date/time in logs (optional)
-org.slf4j.simpleLogger.showDateTime=false
+org.slf4j.simpleLogger.showDateTime=true
+org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss
 org.slf4j.simpleLogger.showThreadName=false
 org.slf4j.simpleLogger.showLogName=false
-org.slf4j.simpleLogger.showShortLogName=false
+org.slf4j.simpleLogger.levelInBrackets=true
+
+# to keep Quartz scheduler quiet
+org.slf4j.simpleLogger.log.org.quartz=error
+
+# Also silence these noisy libraries
+org.slf4j.simpleLogger.log.com.joestelmach.natty=error
+org.slf4j.simpleLogger.log.net.time4j=error
