--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -9,6 +9,6 @@ org.slf4j.simpleLogger.levelInBrackets=true
 # to keep Quartz scheduler quiet
 org.slf4j.simpleLogger.log.org.quartz=error
 
-# Also silence these noisy libraries
+# Also silence noisy libraries
 org.slf4j.simpleLogger.log.com.joestelmach.natty=error
 org.slf4j.simpleLogger.log.net.time4j=error
